--- a/Python Udemy講座/02 pandas入門/Lec17.ipynb
+++ b/Python Udemy講座/02 pandas入門/Lec17.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -14,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#簡単なSeriesを作ってみましょう。\n",
@@ -24,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +41,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,8 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#  「reindex」で「index」の値を変えれる。\n",
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +79,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +107,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +133,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +170,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -212,43 +218,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>2.009186</td>\n",
-       "      <td>-0.416911</td>\n",
-       "      <td>1.209801</td>\n",
-       "      <td>0.933627</td>\n",
-       "      <td>-0.328955</td>\n",
+       "      <td>0.154394</td>\n",
+       "      <td>1.039439</td>\n",
+       "      <td>0.978693</td>\n",
+       "      <td>0.576016</td>\n",
+       "      <td>-1.186757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1.378455</td>\n",
-       "      <td>-1.249703</td>\n",
-       "      <td>-0.787076</td>\n",
-       "      <td>0.150592</td>\n",
-       "      <td>-0.362649</td>\n",
+       "      <td>-0.059129</td>\n",
+       "      <td>0.389652</td>\n",
+       "      <td>-0.043793</td>\n",
+       "      <td>0.696509</td>\n",
+       "      <td>0.863489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>-0.970608</td>\n",
-       "      <td>0.553002</td>\n",
-       "      <td>-1.622929</td>\n",
-       "      <td>0.344363</td>\n",
-       "      <td>-1.229152</td>\n",
+       "      <td>-0.195142</td>\n",
+       "      <td>-0.551297</td>\n",
+       "      <td>-1.250391</td>\n",
+       "      <td>0.380576</td>\n",
+       "      <td>-0.251798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>-0.231687</td>\n",
-       "      <td>-0.982600</td>\n",
-       "      <td>-0.667134</td>\n",
-       "      <td>1.326020</td>\n",
-       "      <td>1.452672</td>\n",
+       "      <td>0.456363</td>\n",
+       "      <td>0.869999</td>\n",
+       "      <td>0.720872</td>\n",
+       "      <td>-0.654378</td>\n",
+       "      <td>-0.593442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>-1.043072</td>\n",
-       "      <td>-0.232878</td>\n",
-       "      <td>1.277972</td>\n",
-       "      <td>0.974397</td>\n",
-       "      <td>1.545201</td>\n",
+       "      <td>1.191520</td>\n",
+       "      <td>1.224578</td>\n",
+       "      <td>1.598917</td>\n",
+       "      <td>-1.289238</td>\n",
+       "      <td>-1.408856</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,14 +262,14 @@
       ],
       "text/plain": [
        "       col1      col2      col3      col4      col5\n",
-       "A  2.009186 -0.416911  1.209801  0.933627 -0.328955\n",
-       "B  1.378455 -1.249703 -0.787076  0.150592 -0.362649\n",
-       "D -0.970608  0.553002 -1.622929  0.344363 -1.229152\n",
-       "E -0.231687 -0.982600 -0.667134  1.326020  1.452672\n",
-       "F -1.043072 -0.232878  1.277972  0.974397  1.545201"
+       "A  0.154394  1.039439  0.978693  0.576016 -1.186757\n",
+       "B -0.059129  0.389652 -0.043793  0.696509  0.863489\n",
+       "D -0.195142 -0.551297 -1.250391  0.380576 -0.251798\n",
+       "E  0.456363  0.869999  0.720872 -0.654378 -0.593442\n",
+       "F  1.191520  1.224578  1.598917 -1.289238 -1.408856"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -312,19 +327,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>2.009186</td>\n",
-       "      <td>-0.416911</td>\n",
-       "      <td>1.209801</td>\n",
-       "      <td>0.933627</td>\n",
-       "      <td>-0.328955</td>\n",
+       "      <td>0.154394</td>\n",
+       "      <td>1.039439</td>\n",
+       "      <td>0.978693</td>\n",
+       "      <td>0.576016</td>\n",
+       "      <td>-1.186757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>1.378455</td>\n",
-       "      <td>-1.249703</td>\n",
-       "      <td>-0.787076</td>\n",
-       "      <td>0.150592</td>\n",
-       "      <td>-0.362649</td>\n",
+       "      <td>-0.059129</td>\n",
+       "      <td>0.389652</td>\n",
+       "      <td>-0.043793</td>\n",
+       "      <td>0.696509</td>\n",
+       "      <td>0.863489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
@@ -336,27 +351,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>-0.970608</td>\n",
-       "      <td>0.553002</td>\n",
-       "      <td>-1.622929</td>\n",
-       "      <td>0.344363</td>\n",
-       "      <td>-1.229152</td>\n",
+       "      <td>-0.195142</td>\n",
+       "      <td>-0.551297</td>\n",
+       "      <td>-1.250391</td>\n",
+       "      <td>0.380576</td>\n",
+       "      <td>-0.251798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>-0.231687</td>\n",
-       "      <td>-0.982600</td>\n",
-       "      <td>-0.667134</td>\n",
-       "      <td>1.326020</td>\n",
-       "      <td>1.452672</td>\n",
+       "      <td>0.456363</td>\n",
+       "      <td>0.869999</td>\n",
+       "      <td>0.720872</td>\n",
+       "      <td>-0.654378</td>\n",
+       "      <td>-0.593442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>-1.043072</td>\n",
-       "      <td>-0.232878</td>\n",
-       "      <td>1.277972</td>\n",
-       "      <td>0.974397</td>\n",
-       "      <td>1.545201</td>\n",
+       "      <td>1.191520</td>\n",
+       "      <td>1.224578</td>\n",
+       "      <td>1.598917</td>\n",
+       "      <td>-1.289238</td>\n",
+       "      <td>-1.408856</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -364,15 +379,15 @@
       ],
       "text/plain": [
        "       col1      col2      col3      col4      col5\n",
-       "A  2.009186 -0.416911  1.209801  0.933627 -0.328955\n",
-       "B  1.378455 -1.249703 -0.787076  0.150592 -0.362649\n",
+       "A  0.154394  1.039439  0.978693  0.576016 -1.186757\n",
+       "B -0.059129  0.389652 -0.043793  0.696509  0.863489\n",
        "C       NaN       NaN       NaN       NaN       NaN\n",
-       "D -0.970608  0.553002 -1.622929  0.344363 -1.229152\n",
-       "E -0.231687 -0.982600 -0.667134  1.326020  1.452672\n",
-       "F -1.043072 -0.232878  1.277972  0.974397  1.545201"
+       "D -0.195142 -0.551297 -1.250391  0.380576 -0.251798\n",
+       "E  0.456363  0.869999  0.720872 -0.654378 -0.593442\n",
+       "F  1.191520  1.224578  1.598917 -1.289238 -1.408856"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +398,22 @@
     "dframe2 = dframe.reindex(new_index)\n",
     "dframe2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -725,7 +756,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
